tests/lean/simpArgTypeMismatch.lean.expected.out
simpArgTypeMismatch.lean:3:29-3:33: error: Application type mismatch: The argument
  Unit
has type
  Type
of sort `Type 1` but is expected to have type
  ¬?m
of sort `Prop` in the application
  decide_eq_false Unit
